// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Textarea Custom Rows 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Textarea field
        </label>
        <textarea
          class="form-control"
          id="foo"
          name="foo"
          rows="10"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Textarea Default 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <textarea
          class="form-control"
          id="foo"
          name="foo"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Textarea Error Feedback 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Textarea field
        </label>
        <textarea
          class="form-control is-invalid"
          id="foo"
          name="foo"
          required=""
        />
        <div
          class="invalid-feedback"
        >
          This field is required
        </div>
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Textarea Help Text 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Textarea field
        </label>
        <textarea
          class="form-control"
          id="foo"
          name="foo"
        >
          Hello, World!
        </textarea>
        <div
          class="invalid-feedback"
        />
        <small
          class="form-text text-muted"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et orci diam. Donec rutrum odio sit amet ante porta, sed tempus est varius.
        </small>
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Textarea Initial Values 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Textarea field
        </label>
        <textarea
          class="form-control"
          id="foo"
          name="foo"
        >
          Hello, World!
        </textarea>
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Textarea Label 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Textarea field
        </label>
        <textarea
          class="form-control"
          id="foo"
          name="foo"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Textarea Placeholder 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Textarea field
        </label>
        <textarea
          class="form-control"
          id="foo"
          name="foo"
          placeholder="Please enter some text..."
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
